// flows/common/selectors.js
output.selectors = {
    loginTab: "Login",
    emailField: "Email",
    passwordField: "Password",
    loginButton: "button-LOGIN"
};
